<resources>
    <string name="app_name">Metas</string>
    <string name="my_goals">Metas</string>
    <string name="add_new_goal">Adicionar nova meta</string>
    <string name="decrement">Decrementar</string>
    <string name="increment">Incrementar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_goal">Nova Meta</string>
    <string name="new_goal_name">Nome</string>
    <string name="foreground_color">Cor de Frente</string>
    <string name="background_color">Cor de Fundo</string>
    <string name="lbl_goal">Meta</string>
    <string name="btn_save">Salvar</string>
    <string name="goal_name">Nome</string>
    <string name="goal_hint">99</string>
    <string name="goal_toast">Deixe vazio para uma meta aberta</string>
    <string name="select_color">Selecionar uma Cor</string>
    <string name="select">Selecionar</string>
    <string name="cancel">Cancelar</string>
    <string name="edit_goal_desc">Editar Meta</string>
    <string name="delete_goal_desc">Deletar Meta</string>
    <string name="hint_increment">Incremento</string>
    <string name="widget_desc">Widget Metas</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="no_goals">Empty List</string>
    <string name="restore_count">Restaurar Contagem</string>
    <string name="confirm_delete">Confirmar Exclusão?</string>
</resources>