<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGoalBottomSheet"
    android:elevation="20dp"
    android:orientation="vertical"
    android:paddingTop="12dp"
    android:paddingBottom="10dp"
    android:paddingHorizontal="20dp"
    android:backgroundTint="@color/darkGray"
    android:background="@drawable/bottomsheet_background">

    <View
        android:layout_width="50dp"
        android:layout_height="6dp"
        android:background="@drawable/bottomsheet_picker"
        android:layout_gravity="center"
        android:backgroundTint="@color/veryLightGray" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/new_goal_name"/>

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="no"
            android:padding="6dp"
            android:nextFocusForward="@id/edit_goal"
            android:textSize="16sp"
            android:hint="@string/goal_name"
            android:textColor="@color/lightGray"
            android:background="@drawable/edit_text_background"
            android:labelFor="@id/lbl_name"
            tools:text="Nome"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/veryLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_fg_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/foreground_color"/>

        <View
            android:id="@+id/color_picker_fg"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/edit_text_background"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/veryLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_bg_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/background_color"/>

        <View
            android:id="@+id/color_picker_bg"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:background="@drawable/edit_text_background"/>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/veryLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_increment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/hint_increment"/>

        <EditText
            android:id="@+id/edit_increment"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="no"
            android:textSize="16sp"
            android:padding="6dp"
            android:hint="@string/goal_hint"
            android:background="@drawable/edit_text_background"
            android:labelFor="@id/lbl_goal"
            android:textColor="@color/lightGray"
            tools:text="1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/veryLightGray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lbl_goal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:text="@string/lbl_goal"/>

        <EditText
            android:id="@+id/edit_goal"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:autofillHints="no"
            android:textSize="16sp"
            android:padding="6dp"
            android:hint="@string/goal_hint"
            android:background="@drawable/edit_text_background"
            android:labelFor="@id/lbl_goal"
            android:textColor="@color/lightGray"
            tools:text="12"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/veryLightGray"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/btn_save"
        android:textColor="@color/lightGray"
        android:background="@drawable/button_background"
        android:layout_marginTop="5dp"/>

</LinearLayout>